# Auto-Rename-Screenshots

./: .gitignore  Cargo.toml  README.md  config.example.json
src/: main.rs  mods.rs
src/mods/: cliinput.rs  clioutput.rs  config.rs  file.rs  types.rs
