[package]
name = "auto_rename_screenshots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sevenz-rust = { version = "0.5.0", features = ["compress"] }
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
structopt = { version = "0.3.26", features = ["color", "suggestions"] }
tokio = { version = "1.32.0", features = ["full", "fs"] }
rand = "0.8.5"
async_zip = { version = "0.0.17", features = ["async-compression", "tokio", "tokio-fs"] }
tokio-util = "0.7.12"
futures-lite = "2.3.0"

[profile.fast]
inherits = "release"
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
